Fix gap between the logo and headers

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
 .sub-banner1{
     font-size: 24px;
     color: #F9FAF8;
-    padding-left: 10px;
+    padding-left: 5px;
     /* background-color: #3882F6; */
     height: 100px;
 }
@@ -33,7 +33,8 @@ html, body {
 
 .Header-First-Row{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap:528px;
 }
 
 .Details-and-Button{
